--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 
 <body>
   <div id="app">
-
+    <div class="main_container">
+      <h1 class="title">HELLO WORLD</h1>
+      <img class="trees" src="./public/v2.png" />
+      <img class="frame_left" src="./public/frame_left.png" />
+      <img class="frame_right" src="./public/frame_righta.png" />
+      <img class="bush_left" src="./public/frame_left_1.png" />
+      <img class="bush_right" src="./public/frame_right_1.png" />
+      <div class="shadow shadow_left"></div>
+      <div class="shadow shadow_right"></div>
+    </div>
   </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
